# Pedestrain-prediction-using-ML-algorithms

./: .gitignore  DOKUMENTACIJA.md  README.md  pyproject.toml
data/processed/: X_test.npy  X_train.npy  X_val.npy  test.csv  train.csv  val.csv  y_test.npy  y_train.npy  y_val.npy
deployment/: api.py
src/: advanced_evaluation.py  config.py  evaluation.py  explore_dataset.py  export_model.py  feature_selection.py  prepare_dataset.py  vizualizacija.py
src/models/: baseline.py  linear_regression.py  random_forest.py  xgb_model.py
