[project]
name = "pedestrian-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
